# inverted-pendulum

./: CMakeLists.txt  README.md
pendulum/: CMakeLists.txt
pendulum/src/: gl_app.cpp  gl_app.h  gl_window.cpp  gl_window.h  main1.cpp  main2.cpp  matrix_eigen.m  pendulum.cpp  pendulum.h  pendulum_data.h
pendulum_cart/: CMakeLists.txt  inv_pendulum.wls  inv_pendulum_simul.ipynb  matrix_eigen.m
pendulum_cart/src/: gl_app.cpp  gl_app.h  gl_window.cpp  gl_window.h  inv_pendulum.cpp  inv_pendulum.h  inv_pendulum_data.h  main1.cpp  main2.cpp  main3.cpp  pendulum_cart.cpp  pendulum_cart.h  pendulum_cart_data.h
